<resources>
    <string name="app_name">KitaAdmin</string>
    <string name="usuario">Usuario</string>
    <string name="contrasenia">Contraseña</string>
    <string name="entrar">Entrar</string>
    <string name="salir">Salir</string>
    <string name="grupos">Grupos</string>
    <string name="comedor">Comedor</string>
    <string name="calendario">Calendario</string>
    <string name="informacion">Información actual</string>
    <string name="ayuda">Ayuda</string>
    <string name="usuarios">Usuarios</string>
    <string name="estadisticas">Estadísticas</string>
    <string name="nombre">Nombre</string>
    <string name="fechaNac">Fecha de nacimiento</string>
    <string name="telef">Teléfono</string>
    <string name="email">Email</string>
    <string name="dni">DNI</string>
    <string name="direccion">Dirección</string>
    <string name="fechaAlta">Fecha de alta</string>
    <string name="grupo">Grupo</string>
    <string name="alergia">Alergia alimentaria</string>
    <string name="datosMed">Datos médicos</string>
    <string name="apuntadoComedor">Apuntado a comedor</string>
    <string name="autoFotos">Autoriza fotos</string>
    <string name="padres">Padres</string>
    <string name="informes">Informes</string>
    <string name="autoSalidas">Autoriza salidas</string>
    <string name="observaciones">Observaciones</string>
    <string name="profesor">Profesor</string>
    <string name="actualizar">Actualizar</string>
    <string name="profesores">Profesores</string>
    <string name="alumnos">Alumnos</string>
    <string name="alumno">Alumno</string>
    <string name="ejemplo">Texto de ejemplo</string>
    <string name="volver">Volver</string>
    <string name="informe">Informe</string>
    <string name="sueno">Sueño</string>
    <string name="deposicion">Deposición</string>
    <string name="comida">Comida</string>
    <string name="bebida">Bebida</string>
    <string name="nombreApellidos">Nombre y apellidos</string>
    <string name="cambiosSinGuardar">Cambios sin guardar</string>
    <string name="salirSinGuardarCambios">¿Desea salir sin guardar los cambios?</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="profesorActualizado">Profesor actualizado</string>
    <string name="alumnoActualizado">Alumno actualizado</string>
    <string name="errorActualizaProfesor">Error al actualizar profesor</string>
    <string name="errorActualizaAlumno">Error al actualizar alumno</string>
    <string name="borrarAlumno">Borrar alumno</string>
    <string name="confirmaBorraAlumno">¿Seguro que desea borrar el alumno?</string>
    <string name="alumnoBorrado">Alumno borrado</string>
    <string name="camposNecesarios">Hay campos obligatorios vacíos</string>
    <string name="campoObligatorio">Campos obligatorios</string>
    <string name="borrarProfesor">Borrar profesor</string>
    <string name="preguntaBorraProfesor">¿Seguro que desea borrar el profesor y su usuario asociado?</string>
    <string name="borrar">Borrar</string>
    <string name="profesorBorrado">Profesor borrado</string>
    <string name="formatoDNI">Formato de DNI no válido</string>
    <string name="sinInforme">No existen datos para la fecha seleccionada</string>
    <string name="guardar">Guardar</string>
    <string name="tiempoDormido">Tiempo dormido</string>
    <string name="informeActualizado">Informe actualizado</string>
    <string name="errorActualizaInforme">Error al actualizar informe</string>
    <string name="desayuno">Desayuno</string>
    <string name="snack">Snack</string>
    <string name="platoPrincipal">Plato principal</string>
    <string name="postre">Postre</string>
    <string name="comedorActualizado">Menú del día actualizado</string>
    <string name="errorActualizaComedor">Error al actualizar menú</string>
    <string name="calendarioSinEvento">No existen eventos para el día seleccionado</string>
    <string name="gestionUsuarios">Gestión de usuarios</string>
    <string name="nombreUsuario">Nombre de usuario</string>
    <string name="rol">Rol</string>
    <string name="crearUsuario">Añadir</string>
    <string name="borrarUsuario">Borrar usuario</string>
    <string name="confirmaBorraUsuario">¿Seguro que desea borrar el usuario?</string>
    <string name="usuarioBorrado">Usuario borrado</string>
    <string name="usuarioActualizado">Usuario actualizado</string>
    <string name="errorActualizaUsuario">Error al actualizar usuario</string>
    <string name="errorCreaUsuario">Error al crear el usuario</string>
    <string name="usuarioCreado">Usuario creado correctamente</string>
    <string name="busqueda">Buscar usuario</string>
    <string name="anadirCalendario">Escriba aquí la información a añadir</string>
    <string name="calendarioActualizado">Calendario actualizado</string>
    <string name="errorActualizaCalendario">Error al actualizar calendario</string>
    <string name="borrarCalendario">Borrar evento del calendario</string>
    <string name="confirmaBorraCalendario">¿Seguro que desea borrar el evento?</string>
    <string name="calendarioBorrado">Evento borrado</string>
    <string name="borrarComedor">Borrar menú del día</string>
    <string name="confirmaBorraComedor">¿Seguro que desea borrar el menú?</string>
    <string name="comedorBorrado">Menú borrado</string>
    <string name="borrarInformacion">Borrar información</string>
    <string name="confirmaBorraInformacion">¿Seguro que desea borrar la información?</string>
    <string name="informacionBorrada">Información borrada</string>
    <string name="informacionActualizada">Información actualizada</string>
    <string name="errorActualizaInformacion">Error al actualizar información</string>
    <string name="errorCreaAlumno">Error al crear el alumno</string>
    <string name="alumnoCreado">Alumno creado correctamente</string>
    <string name="errorCreaProfesor">Error al crear el profesor</string>
    <string name="profesorCreado">Profesor creado correctamente</string>
    <string name="sinProfesores">No hay profesores para añadir</string>
    <string name="sinPadres">No existe información de padres</string>
    <string name="usuarioNoValido">Usuario o contraseña no válidos</string>
    <string name="usuarioVacio">El usuario no puede estar vacío</string>
    <string name="contraseniaVacia">La contraseña no puede estar vacía</string>
    <string name="sinInfoActual">No existe información actualmente</string>
    <string name="cerrarSesionTitulo">Cerrar sesión</string>
    <string name="cerrarSesion">¿Seguro que desea salir?</string>

    <string-array name="itemsAyuda">
        <item>¿Cómo visualizo los alumnos?</item>
        <item>¿Cómo visualizo los informes de un alumno?</item>
        <item>¿Cómo visualizo los profesores?</item>
        <item>¿Cómo visualizo el menú del día del comedor?</item>
        <item>¿Cómo visualizo los eventos del día?</item>
        <item>¿Cómo visualizo la información actual destacada?</item>
    </string-array>

    <string-array name="ayduaDescriptions">
        <item>Para visualizar el listado de alumnos de un grupo concreto, desde el menú principal pulse en grupos, a continuación pulse en el grupo que desee y apor último pulse la opción alumnos. Se le mostrará el listado actual de alumnos para dicho grupo</item>
        <item>Desde el listado de alumnos, pulse sobre el alumno deseado y se le mostrará la información completa. En la zona inferior accederá a los informes del alumno</item>
        <item>Para visualizar el listado de profesores de un grupo concreto, desde el menú principal pulse en grupos, a continuación pulse en el grupo que desee y apor último pulse la opción profesores. Se le mostrará el listado actual de profesores para dicho grupo</item>
        <item>Para visualizar el menú del día del comedor, desde el menú principal pulse sobre la opción comedor. Puede elegir una fecha distinta si así lo desea, pulsando en las flechas junto a la fecha, o bien pulsar sobre la fecha, lo que abrirá un calendario que le permitirá seleccionar la fecha deseada</item>
        <item>Para visualizar los eventos del día pulse sobre la opción calendario desde el menú principal. Si lo desea puede cambiar la fecha pinchando sobre el día deseado.</item>
        <item>Para visualizar la información importante actual, pulse sobre la opción información actual desde el menú principal.</item>
    </string-array>
</resources>