<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calendario"
        app:layout_constraintEnd_toEndOf="@id/calendarBtn"
        app:layout_constraintStart_toStartOf="@id/calendarBtn"
        app:layout_constraintTop_toBottomOf="@id/calendarBtn" />

    <TextView
        android:id="@+id/textViewUsuariosDataBase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usuarios"
        app:layout_constraintEnd_toEndOf="@id/databaseBtn"
        app:layout_constraintStart_toStartOf="@id/databaseBtn"
        app:layout_constraintTop_toBottomOf="@id/databaseBtn" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ayuda"
        app:layout_constraintEnd_toEndOf="@id/faqBtn"
        app:layout_constraintStart_toStartOf="@id/faqBtn"
        app:layout_constraintTop_toBottomOf="@id/faqBtn" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/informacion"
        app:layout_constraintEnd_toEndOf="@id/infoBtn"
        app:layout_constraintStart_toStartOf="@id/infoBtn"
        app:layout_constraintTop_toBottomOf="@id/infoBtn" />

    <ImageButton
        android:id="@+id/databaseBtn"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="70dp"
        android:background="@drawable/icon_database"
        android:onClick="usuarios"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infoBtn"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/infoBtn"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="70dp"
        android:background="@drawable/icon_info"
        android:onClick="info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/foodBtn"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/foodBtn"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="70dp"
        android:background="@drawable/icon_food"
        android:onClick="comedor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />


    <ImageButton
        android:id="@+id/groupBtn"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="150dp"
        android:background="@drawable/icon_group"
        android:onClick="grupos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageButton
        android:id="@+id/faqBtn"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/icon_faq"
        android:onClick="ayuda"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendarBtn" />

    <ImageButton
        android:id="@+id/calendarBtn"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/icon_calendar"
        android:onClick="calendario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/groupBtn" />

    <Button
        android:id="@+id/exitBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:background="@drawable/button_rounded"
        android:onClick="volver"
        android:text="@string/salir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/databaseBtn" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/grupos"
        app:layout_constraintEnd_toEndOf="@+id/groupBtn"
        app:layout_constraintStart_toStartOf="@+id/groupBtn"
        app:layout_constraintTop_toBottomOf="@+id/groupBtn" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comedor"
        app:layout_constraintEnd_toEndOf="@+id/foodBtn"
        app:layout_constraintStart_toStartOf="@+id/foodBtn"
        app:layout_constraintTop_toBottomOf="@id/foodBtn" />
</androidx.constraintlayout.widget.ConstraintLayout>